--- a/.gitignore
+++ b/.gitignore
@@ -122,3 +122,6 @@ About
 # If the source bank files are kept outside of the StreamingAssets folder then these can be ignored.
 # Log files can be ignored.
 fmod_editor.log
+
+# Dont' keep track of the save file.
+/saveGame.xml
